[metadata]
name=Buycoins Python SDK
version=0.0.1
author=Faruq Yusuff
author_email=faruqyusuff437@gmail.com
description=A Python SDK for Buycoins
license=MIT
keywords=sdk buycoins
url=https://github.com/GoZaddy/buycoins_sdk
long_description=file: README.md
classifiers =
    Development Status :: 4 - Beta
    Topic :: SDK
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
packages=find:
python_requires = >=3.6
install_requires =
    python-graphql-client==0.4.2
    python-dotenv==0.15.0
    requests~=2.25.1
setup_requires=
tests_require=
