[bumpversion]
current_version = 0.0.2

[metadata]
name = buycoins_sdk
version = 0.0.2
author = Faruq Yusuff
author_email = faruqyusuff437@gmail.com
description = A Python SDK for Buycoins
license = MIT
keywords = sdk buycoins
url = https://github.com/GoZaddy/buycoins_sdk
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.6
install_requires = 
	python-graphql-client==0.4.2
	python-dotenv==0.15.0
	requests~=2.25.1
setup_requires = 
tests_require =
